--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
 extracted_features/
+camera_models/cam1_frames/
+camera_models/cam2_frames/
+supporting_files/cam1_svm_model.dat
+supporting_files/cam2_svm_model.dat
