--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ camera_models/cam1_frames/
 camera_models/cam2_frames/
 supporting_files/cam1_svm_model.dat
 supporting_files/cam2_svm_model.dat
+supporting_files/cam1_svm.pkl
+supporting_files/cam2_svm.pkl
