Removed the labels files by adding them to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ supporting_files/cam1_svm_model.dat
 supporting_files/cam2_svm_model.dat
 supporting_files/cam1_svm.pkl
 supporting_files/cam2_svm.pkl
+supporting_files/dataset_25_fps_val_set_labels/
+supporting_files/dataset_25_fps_test_set_labels/
