--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,6 @@ supporting_files/cam2_svm.pkl
 supporting_files/dataset_25_fps_val_set_labels/
 supporting_files/dataset_25_fps_test_set_labels/
 features/vis_test_hist_diffs/
+shot_extraction/*.pyc
+features/*.pyc
+models/*.pyc
